--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-asgiref==3.11.0
-Django==6.0
-djangorestframework==3.16.1
-pillow==12.0.0
-sqlparse==0.5.5
+Django==5.1.2
+djangorestframework==3.15.2
+Pillow==10.4.0
+psycopg2-binary==2.9.9
+python-decouple==3.8
